--- a/Backend/ECEnglishTechTask.API/ECEnglishTechTask.API.csproj
+++ b/Backend/ECEnglishTechTask.API/ECEnglishTechTask.API.csproj
@@ -3,11 +3,14 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ECEnglishTechTask.Application\ECEnglishTechTask.Application.csproj" />
   </ItemGroup>
 
 </Project>
