Added Course context and repository

--- a/Backend/ECEnglishTechTask.Application/ECEnglishTechTask.Application.csproj
+++ b/Backend/ECEnglishTechTask.Application/ECEnglishTechTask.Application.csproj
@@ -1,12 +1,17 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
-    <ProjectReference Include="..\ECEnglishTechTask.Core\ECEnglishTechTask.Core.csproj" />
+    <ProjectReference Include="..\ECEnglishTechTask.Core\ECEnglishTechTask.Core.csproj"/>
+    <ProjectReference Include="..\ECEnglishTechTask.DAL\ECEnglishTechTask.DAL.csproj"/>
   </ItemGroup>
-
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6"/>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0"/>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2"/>
+    <PackageReference Include="AutoMapper" Version="13.0.1"/>
+  </ItemGroup>
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-
 </Project>
