--- a/Backend/ECEnglishTechTask.DAL/ECEnglishTechTask.DAL.csproj
+++ b/Backend/ECEnglishTechTask.DAL/ECEnglishTechTask.DAL.csproj
@@ -1,12 +1,12 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
-    <ProjectReference Include="..\ECEnglishTechTask.Core\ECEnglishTechTask.Core.csproj" />
+    <ProjectReference Include="..\ECEnglishTechTask.Core\ECEnglishTechTask.Core.csproj"/>
   </ItemGroup>
-
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.6"/>
+  </ItemGroup>
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-
 </Project>
